# aoc2022

./: .gitignore  CMakeLists.txt  build.sh  configure.sh  go.sh  main.cpp  run.sh
parser/: CMakeLists.txt
parser/include/: parser.h
solutions/: CMakeLists.txt
solutions/include/: solutions.h
solutions/src/: solutions.cpp
solutions/test-src/: test_solutions.cpp
